add final changes

--- a/final tuned solvers/.vscode/settings.json
+++ b/final tuned solvers/.vscode/settings.json
@@ -5,6 +5,7 @@
         "bit": "cpp",
         "*.tcc": "cpp",
         "cctype": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
         "compare": "cpp",
@@ -14,6 +15,7 @@
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
+        "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
@@ -28,11 +30,13 @@
         "memory_resource": "cpp",
         "numeric": "cpp",
         "random": "cpp",
+        "ratio": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
+        "fstream": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
@@ -41,15 +45,11 @@
         "new": "cpp",
         "numbers": "cpp",
         "ostream": "cpp",
+        "span": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "ctime": "cpp",
-        "iomanip": "cpp",
-        "sstream": "cpp",
-        "fstream": "cpp",
-        "span": "cpp",
-        "chrono": "cpp",
-        "ratio": "cpp"
+        "iomanip": "cpp"
     }
 }
